--- a/app/build.gradle
+++ b/app/build.gradle
@@ -10,6 +10,10 @@ android {
         versionName "1.0"
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
     }
+    aaptOptions {
+        noCompress "tflite"
+        noCompress "lite"
+    }
     buildTypes {
         release {
             minifyEnabled false
@@ -30,4 +34,5 @@ dependencies {
     implementation group: 'com.j256.ormlite', name: 'ormlite-android', version: '5.1'
     implementation 'com.android.volley:volley:1.1.1'
     implementation 'com.google.android.gms:play-services:12.0.1'
+    implementation 'org.tensorflow:tensorflow-lite:+'
 }
